--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+<!-- Created By Lorenzo Gurgoglione -->
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
