--- a/index.html
+++ b/index.html
@@ -14,16 +14,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
     <!-- fav-icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/favicon.jpeg">
-
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
     <meta name="msapplication-TileColor" content="#da532c">
-
     <meta name="theme-color" content="#ffffff">
 
 </head>
@@ -37,10 +32,12 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Accueil</a></li>
                 <li><a href="#about" class="menu-btn">À propos</a></li>
-                <li><a href="#services" class="menu-btn">Mes Services</a></li>
+                <li><a href="#services" class="menu-btn">Mes Projets</a></li>
                 <li><a href="#skills" class="menu-btn">Mes Compétences</a></li>
                 <li><a href="#teams" class="menu-btn">Mon Réseau</a></li>
                 <li><a href="#contact" class="menu-btn">Me contacter</a></li>
+               
+
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -86,6 +83,7 @@
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
                         <div class="text">Web Design</div>
+                        <a href="Projets.html">Projets</a>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
                     </div>
                 </div>
