--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <img src="images/lg.png"width="400" height="200">
+            <img src="images/lg.png"width="auto" height="100">
             <div class="logo"><a href="#">Mon Portfo<span>lio.</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Accueil</a></li>
