--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Bonjour ! Mon nom est</div>
-                <div class="text-2">Lorenzo Gurgoglione</div>
+                <div class="text-2">Lorenzo Gurgoglion</div>
                 <div class="text-3">Et je suis un <span class="typing"></span></div>
                 <a href="#about">En savoir plus ...<div class=""></div></a>
             </div>
