--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Bonjour ! Mon nom est</div>
-                <div class="text-2">Lorenzo Gurgoglion</div>
+                <div class="text-2">Lorenzo Gurgoglione</div>
                 <div class="text-3">Et je suis un <span class="typing"></span></div>
                 <a href="#about">En savoir plus ...<div class=""></div></a>
             </div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Je m'appelle Lorenzo Gurgoglione, je suis aussi un <span class="typing-2"></span></div>
-                    <p>Actuellement, je suis un étudiant en troisième année de licence informatique à l'Université Grandmont dans la ville de Tours. Passioné d'informatique, autodidacte et curieux j'ai façonné ce site pour exposer mon parcours, mes projets et mes passions.</p>
+                    <p>Je suis à la recherche d'une première expérience dans le domaine de la fouille de donnée (alternance, job, assistant, stage). Diplômé d'une licence en informatique, je suis avant tout un jeune, motivé et passionné par l'étude des données.</p>
                     <a href="https://drive.google.com/file/d/1zKuzlKD84qfJa1Dcs2q_alvIafHiP9Oj/view?usp=sharing">Télécharger mon CV</a>
                 </div>
             </div>
