--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="home-content">
                 <div class="text-1">Bonjour ! Mon nom est</div>
                 <div class="text-2">Lorenzo Gurgoglione</div>
-                <div class="text-3">Et je suis un <span class="typing"></span></div>
+                <div class="text-3">Et je suis un jeune <span class="typing"></span></div>
                 <a href="#about">En savoir plus ...<div class=""></div></a>
             </div>
         </div>
