--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <img src="images/profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Je m'appelle Lorenzo Gurgoglione, je suis aussi un <span class="typing-2"></span></div>
+                    <div class="text">Je m'appelle Lorenzo Gurgoglione, je suis un jeune<span class="typing-2"></span></div>
                     <p>Je suis à la recherche d'une première expérience dans le domaine de la fouille de donnée (alternance, job, assistant, stage). Diplômé d'une licence en informatique, je suis avant tout un jeune, motivé et passionné par l'étude des données.</p>
                     <a href="https://drive.google.com/file/d/1zKuzlKD84qfJa1Dcs2q_alvIafHiP9Oj/view?usp=sharing">Télécharger mon CV</a>
                 </div>
