--- a/index.html
+++ b/index.html
@@ -217,22 +217,22 @@
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
-                                <div class="head">Name</div>
-                                <div class="sub-title">Prakash Shahi</div>
+                                <div class="head">Gurgoglione</div>
+                                <div class="sub-title">Gurgoglione Lorenzo</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Surkhet, Nepal</div>
+                                <div class="sub-title">Tours, France</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                                <div class="sub-title">lorenzo.gurgo@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <button type="submit">Envoyer un message</button>
                         </div>
                     </form>
                 </div>
