--- a/index.html
+++ b/index.html
@@ -211,20 +211,20 @@
             <h2 class="title">Contactez moi !</h2>
             <div class="contact-content">
                 <div class="column left">
-                    <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <div class="text">Me contacter</div>
+                    <p>Mon numéro : 0628274323</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
                             <div class="info">
-                                <div class="head">Gurgoglione</div>
+                                <div class="head">Mon nom & prénom</div>
                                 <div class="sub-title">Gurgoglione Lorenzo</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
-                                <div class="head">Address</div>
+                                <div class="head">Mon adresse</div>
                                 <div class="sub-title">Tours, France</div>
                             </div>
                         </div>
